<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softGrey"
    android:id="@+id/sv_detailed">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.favorite_neighbour.DetailedNeighbourActivity"
    android:orientation="vertical"
    android:weightSum="100"
    android:background="@color/softGrey">

    <RelativeLayout
        android:id="@+id/rl_detailed_avatar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="30"

        >
        <ImageView
            android:id="@+id/iv_detaile_avatar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/avatar"
            android:scaleType="centerCrop"/>


        <ImageView
            android:id="@+id/iv_detailed_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/ic_baseline_arrow_back_34"
            android:layout_margin="20dp"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tv_detailed_bigname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="35sp"
            android:textColor="@color/ninetyTransparentWhite"
            android:textStyle="bold"/>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_detailed_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="30"
        android:clickable="true"
        app:backgroundTint="#FFFFFF"
        app:srcCompat="@drawable/ic_baseline_star_border_24" />

    <RelativeLayout
        android:id="@+id/rl_detailed_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="33"
        android:background="@color/ninetyTransparentWhite"
        android:layout_margin="12dp"
        android:gravity="center"
        android:layout_below="@id/rl_detailed_avatar">

        <TextView
            android:id="@+id/tv_detailed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:padding="10dp"
            android:text="@string/user_name"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_detailed_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_location_on_24"
            android:text="@string/did_not"
            android:layout_below="@+id/tv_detailed_name"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/tv_detailed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_local_phone_24"
            android:text="@string/did_not"
            android:layout_below="@+id/tv_detailed_location"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/tv_detailed_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_language_24"
            android:text="@string/did_not"
            android:layout_below="@+id/tv_detailed_phone"
            android:padding="10dp"/>




    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="37"
        android:background="@color/ninetyTransparentWhite"
        android:layout_margin="12dp"
        android:orientation="vertical"
        android:layout_below="@+id/rl_detailed_data">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textStyle="bold"
            android:textSize="25sp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/tv_detailed_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/did_not"
            android:padding="10dp"
            />

    </LinearLayout>


</RelativeLayout>

</ScrollView>